--- a/myRC.yml
+++ b/myRC.yml
@@ -5,16 +5,16 @@ metadata:
 spec:
   replicas: 3
   selector:
-    app: myvertexpod
+    app: mynginx
     Version: 2.6.2
   template:
     metadata:
       labels:
-        app: myvertexpod 
+        app: mynginx 
         Version: 2.6.2
     spec:
       containers:
-        - name: mynginx
+        - name: mynginx-container
           image: nginx
           ports:
             - containerPort: 80
