--- a/myRC.yml
+++ b/myRC.yml
@@ -5,16 +5,16 @@ metadata:
 spec:
   replicas: 5
   selector:
-    app: mynginx
+    app: myvertexapp
     Version: 2.6.2
   template:
     metadata:
       labels:
-        app: mynginx 
+        app: myvertexapp
         Version: 2.6.2
     spec:
       containers:
         - name: mynginx-container
-          image: nginx
+          image: gouriboga/myjavaimage18nov22:1
           ports:
-            - containerPort: 80
+            - containerPort: 8080
